<resources>
    <string name="app_name">Показания счётчика</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Add_new_counter">Добавит новые показания</string>
    <string name="Prev_counter">Преведущие показания</string>
    <string name="New_counter">Введите новые показания</string>
    <string name="New_tarif">Введите тариф</string>
    <string name="Rashod">Расход:</string>
    <string name="Rub">Руб.</string>
    <string name="Save">Сохранить</string>
    <string name="Cancel">Отмена</string>
    <string name="Error_test">Новые показания должны быть больше преведущих</string>
    <string name="Error">Ошибка!</string>
    <string name="Ok">Ок</string>
</resources>